# INILibrary

./: .gitignore  CNAME  INILibrary.html  README.md  index.html  pyproject.toml
ini/: example.ini
src/inilibrary/: INILibrary.py  __init__.py
tests/: test_inilibrary.robot
